--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   background-color: rgba(255, 127, 80, 0.904);
   margin: auto;
-  width: fit-content;
+  width: max-content;
   max-width: 900px;
   text-align: center;
   justify-content: center;
@@ -71,7 +71,7 @@ button {
 
 #thought-count {
   background-color: coral;
-  width: fit-content;
+  width: max-content;
   margin: auto;
   font-size: min(3vw, 25px);
   font-weight: bold;
@@ -123,8 +123,10 @@ ul li .thoughts {
   display: block;
   color: #000;
   background: #ffc;
-  height: min(7vw, 70px);
-  width: min(7vw, 70px);
+  height: 7vw;
+  width: 7vw;
+  max-height: 70px;
+  max-width: 70px;
   padding: 2px;
   line-height: 10px;
   transition: transform .15s linear;
