--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ button {
 #thought-count {
   background-color: coral;
   width: max-content;
+  max-width: 900px;
   margin: auto;
   font-size: min(3vw, 25px);
   font-weight: bold;
